[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/GameController.gd" type="Script" id=1]
[ext_resource path="res://graphics/16x16_speccy/16x16_speccy_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://scripts/Hero.gd" type="Script" id=3]
[ext_resource path="res://graphics/16x16_speccy/characters/hero_default.png" type="Texture" id=4]
[ext_resource path="res://scripts/NPC.gd" type="Script" id=5]
[ext_resource path="res://graphics/16x16_speccy/characters/shopkeeper.png" type="Texture" id=6]
[ext_resource path="res://graphics/16x16_speccy/objects/outdoors.png" type="Texture" id=7]
[ext_resource path="res://scripts/Main_Camera.gd" type="Script" id=8]
[ext_resource path="res://scripts/DialoguePanel.gd" type="Script" id=9]
[ext_resource path="res://fonts/Roboto Mono/RobotoMono-Standard.tres" type="DynamicFont" id=10]
[ext_resource path="res://scripts/SidePanel.gd" type="Script" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_top = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_top = 2
border_width_right = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.109804, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[node name="GameController" type="Node2D"]
script = ExtResource( 1 )
tileset = "16x16_speccy"

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131087, 0, 1, 131088, 0, 1, 131089, 0, 2, 131090, 0, 1, 131091, 0, 2, 131092, 0, 1, 131093, 0, 1, 131094, 0, 1, 131095, 0, 1, 131096, 0, 2, 131097, 0, 1, 131098, 0, 1, 196623, 0, 1, 196624, 0, 65538, 196625, 0, 65538, 196626, 0, 65538, 196627, 0, 65538, 196628, 0, 131072, 196629, 0, 1, 196630, 0, 65537, 196631, 0, 65537, 196632, 0, 131075, 196633, 0, 131075, 196634, 0, 2, 262147, 1, 0, 262152, 1, 0, 262159, 0, 1, 262160, 0, 65538, 262161, 0, 65538, 262162, 0, 65538, 262163, 0, 65538, 262164, 0, 65538, 262165, 0, 131074, 262166, 0, 65537, 262167, 0, 65537, 262168, 0, 65537, 262169, 0, 65537, 262170, 0, 1, 327683, 1, 0, 327684, 1, 65536, 327685, 1, 65536, 327686, 1, 65536, 327687, 1, 65536, 327688, 1, 0, 327695, 0, 2, 327696, 0, 65538, 327697, 0, 65538, 327698, 0, 65538, 327699, 0, 65538, 327700, 0, 65538, 327701, 0, 1, 327702, 0, 65537, 327703, 0, 65539, 327704, 0, 65537, 327705, 0, 65537, 327706, 0, 1, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393231, 0, 1, 393232, 0, 65538, 393233, 0, 65538, 393234, 0, 65538, 393235, 0, 65538, 393236, 0, 65538, 393237, 0, 1, 393238, 0, 65537, 393239, 0, 65537, 393240, 0, 65537, 393241, 0, 65537, 393242, 0, 2, 458755, 1, 0, 458756, 1, 65536, 458757, 1, 65536, 458758, 1, 65536, 458759, 1, 65536, 458760, 1, 0, 458767, 0, 1, 458768, 0, 1, 458769, 0, 0, 458770, 0, 2, 458771, 0, 1, 458772, 0, 1, 458773, 0, 1, 458774, 0, 1, 458775, 0, 1, 458776, 0, 2, 458777, 0, 1, 458778, 0, 1, 524291, 1, 0, 524296, 1, 0, 524305, 1, 0, 524306, 1, 196608, 589840, 1, 0, 589841, 1, 0, 655376, 1, 0, 655378, 1, 0, 720914, 1, 0, 786449, 1, 0 )

[node name="Hero" type="StaticBody2D" parent="." groups=[
"Entity",
]]
editor/display_folded = true
position = Vector2( 192, 112 )
z_index = 1
collision_mask = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
hero_name = "Patrick"

[node name="Collider" type="CollisionPolygon2D" parent="Hero"]
polygon = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[node name="Ray" type="RayCast2D" parent="Hero"]
position = Vector2( 4, 8 )
enabled = true
cast_to = Vector2( 16, 0 )

[node name="CameraFocus" type="Position2D" parent="Hero"]
position = Vector2( 8, 8 )

[node name="Sprite" type="Sprite" parent="Hero"]
z_index = 1
texture = ExtResource( 4 )
centered = false

[node name="Bob" type="StaticBody2D" parent="." groups=[
"NPC",
]]
editor/display_folded = true
position = Vector2( 272, 64 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
given_name = "Bob"
occupation = "Shopkeeper"
npc_id = "shopkeeper"
npc_color = Color( 0, 0.133333, 0.639216, 1 )

[node name="Sprite" type="Sprite" parent="Bob"]
z_index = 1
texture = ExtResource( 6 )
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bob"]
visible = false
polygon = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[node name="RoadSign" type="StaticBody2D" parent="." groups=[
"NPC",
]]
editor/display_folded = true
position = Vector2( 160, 144 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
given_name = "Sign"
occupation = "sign"
npc_id = "sign"
npc_color = Color( 0.976471, 1, 0, 1 )

[node name="Sprite" type="Sprite" parent="RoadSign"]
z_index = 1
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RoadSign"]
visible = false
polygon = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2( 236, 106 )
z_index = 10
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 8 )
zoom_table = [ 1.0, 0.5, 0.25 ]

[node name="UI" type="Control" parent="MainCamera"]
anchor_right = 1.0
margin_left = -320.0
margin_top = -240.0
margin_right = 320.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 320, 240 )
__meta__ = {
"_edit_lock_": true
}

[node name="DialoguePanel" type="Panel" parent="MainCamera/UI"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -640.0
margin_top = 390.0
margin_right = -108.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 9 )

[node name="Dialogue" type="RichTextLabel" parent="MainCamera/UI/DialoguePanel"]
margin_top = 8.0
margin_right = 516.0
margin_bottom = 90.0
custom_fonts/normal_font = ExtResource( 10 )
custom_constants/line_separation = 0
bbcode_enabled = true
bbcode_text = "mmmmmmm sweeet little font mmmmm"
text = "mmmmmmm sweeet little font mmmmm"
scroll_active = false

[node name="ChoiceContainer" type="HSplitContainer" parent="MainCamera/UI/DialoguePanel"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -16.0
margin_right = -4.0
dragger_visibility = 1

[node name="NpcNamePanel" type="Panel" parent="MainCamera/UI/DialoguePanel"]
margin_top = -24.0
margin_right = 94.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="MainCamera/UI/DialoguePanel/NpcNamePanel"]
margin_top = 2.0
margin_right = 92.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 10 )
valign = 1

[node name="SidePanel" type="Panel" parent="MainCamera/UI"]
anchor_right = 1.0
margin_left = 516.0
margin_bottom = 480.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 11 )
class_color_list = PoolColorArray( 0.847059, 0, 0, 1, 0, 0.207843, 1, 1 )

[node name="Label" type="Label" parent="MainCamera/UI/SidePanel"]
margin_left = 12.0
margin_right = 124.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 10 )
custom_constants/line_spacing = 0
text = "GODOT
QUEST"
align = 1
valign = 1

[node name="HeroClass" type="Label" parent="MainCamera/UI/SidePanel"]
margin_left = 16.0
margin_top = 54.0
margin_right = 124.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 10 )
text = "TESTIFICATE"
valign = 1

[node name="Level" type="Label" parent="MainCamera/UI/SidePanel"]
margin_left = 16.0
margin_top = 70.0
margin_right = 80.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 10 )
text = "LVL000"
valign = 1

[node name="ExpLabel" type="Label" parent="MainCamera/UI/SidePanel"]
margin_left = 16.0
margin_top = 86.0
margin_right = 48.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 10 )
text = "EXP"
valign = 1

[node name="ExpProgress" type="ProgressBar" parent="MainCamera/UI/SidePanel"]
margin_left = 48.0
margin_top = 89.0
margin_right = 112.0
margin_bottom = 105.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
custom_fonts/font = ExtResource( 10 )
value = 50.0
percent_visible = false
[connection signal="choice_change" from="Hero" to="MainCamera/UI/DialoguePanel" method="_on_Hero_choice_change"]
[connection signal="dialogue_trigger" from="Hero" to="MainCamera/UI/DialoguePanel" method="_on_Hero_dialogue_trigger"]
[connection signal="hero_moved" from="Hero" to="MainCamera" method="_on_Hero_hero_moved" binds= [ Vector2( 0, 0 ) ]]
[connection signal="ready" from="Hero" to="MainCamera/UI/SidePanel" method="_on_Hero_ready"]
[connection signal="ready" from="Bob" to="MainCamera/UI/SidePanel" method="_on_Bob_ready"]
[connection signal="choice_begin" from="MainCamera/UI/DialoguePanel" to="Hero" method="_on_DialoguePanel_choice_begin"]
[connection signal="choice_end" from="MainCamera/UI/DialoguePanel" to="Hero" method="_on_DialoguePanel_choice_end"]
[connection signal="dialogue_begin" from="MainCamera/UI/DialoguePanel" to="Hero" method="_on_DialoguePanel_dialogue_begin"]
[connection signal="dialogue_end" from="MainCamera/UI/DialoguePanel" to="Hero" method="_on_DialoguePanel_dialogue_end"]
